jupyterhub/jupyterhub/base/jupyterhub-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to:
    - apiVersion: apps.openshift.io/v1
      kind: DeploymentConfig
      name: jupyterhub-db # {"$openapi":"JUPYTERHUB_STORAGE_NAME"}
  labels:
    app: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
  name: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
spec:
  replicas: 1
  selector:
    app: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
    deploymentconfig: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
  strategy:
    recreateParams:
      timeoutSeconds: 1200
    type: Recreate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        sidecar.istio.io/inject: "true"
      labels:
        app: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
        deploymentconfig: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
        component: web
        component.opendatahub.io/name: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
        opendatahub.io/component: 'true'
    spec:
      containers:
      - name: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
        image: jupyterhub-img:latest # {"$openapi":"JUPYTERHUB_IMAGE_TAG"}
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
        volumeMounts:
        - mountPath: /opt/app-root/configs
          name: config
      serviceAccountName: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
      imagePullSecrets:
      - name: addon-managed-odh-pullsecret
      volumes:
      - configMap:
          defaultMode: 420
          name: jupyterhub-cfg # {"$openapi":"JUPYTERHUB_CONFIGMAP_NAME"}
        name: config
  triggers:
  - type: ConfigChange
