jupyterhub/jupyterhub/base/jupyterhub-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kamhub # {"$openapi":"APPLICATION_NAME"}
  name: kamhub-db # {"$openapi":"APPLICATION_DB_NAME"}
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: kamhub # {"$openapi":"APPLICATION_NAME"}
    deploymentconfig: kamhub-db # {"$openapi":"APPLICATION_DB_NAME"}
