jupyterhub/jupyterhub/base/jupyterhub-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyterhub # {"$openapi":"APPLICATION_NAME"}
  name: jupyterhub # {"$openapi":"APPLICATION_NAME"}
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: jupyterhub # {"$openapi":"APPLICATION_NAME"}
    deploymentconfig: jupyterhub # {"$openapi":"APPLICATION_NAME"}
