jupyterhub/jupyterhub/base/jupyterhub-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
  name: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
spec:
  host: ''
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jupyterhub # {"$openapi":"JUPYTERHUB_NAME"}
    weight: 100
